Реализовать основной функционал для игры Игрок vs Игрок

--- a/Checkers.csproj
+++ b/Checkers.csproj
@@ -6,10 +6,15 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationIcon>Resources\i-round.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Remove="Class1.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\i-round.ico" />
   </ItemGroup>
 
   <ItemGroup>
